2007-03-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/Makefile.am:
	* data/glade/greeter-initial.glade:
	* data/glade/greeter-start_new.glade:
	* data/glade/greeter-start_new_error.glade:
	* data/glade/greeter-start_new_success.glade:
	  Add new greeter glade files.
	* flumotion/admin/gtk/greeter.py:
	  Implement starting a manager and worker for the user.
	* flumotion/admin/gtk/wizard.py:
	  Make WizardStep take the Wizard in the constructor so .wizard
	  actually gets set.
	  Allow on_next to return a *signaled* return value to indicate
	  that it will fire a signal when it is done, allowing non-blocking
	  work to be done in the background.
	  Handle the next button sensitivity while the wizard is doing stuff.

2007-03-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/service.py:
	  Don't comment out the manager port to connect to.
	  Set to debug level 4 by default.

2007-03-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/config.py:
	  Expose BOOL_TRUE_VALUES so we can use it somewhere else
	* flumotion/service/service.py:
	  Set feeder ports to random by default.  We should change this in
	  the future after using the Command classes for options.
	* flumotion/test/test_worker_worker.py:
	  Fix the test.
	* flumotion/test/test_workerconfig.py:
	  Add test for random feeder ports.
	* flumotion/worker/config.py:
	  Allow specifying random feeder ports in the configuration.

2007-03-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/main.py:
	* flumotion/worker/worker.py:
	  Implement --random-feederports as per #585.

2007-03-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/main.py:
	  Add a comment.

2007-03-12  Michael Smith  <msmith@fluendo.com>

	* flumotion/common/netutils.py:
	  Make parser work again.

2007-03-12  Michael Smith  <msmith@fluendo.com>

	* flumotion/common/netutils.py: