@@ -1,3 +1,10 @@
+2007-03-14  Sebastien Merle  <sebastien@fluendo.com>
+
+	* flumotion/twisted/compat.py: 
+	Added a compatibility function to check if an objec tis an interface.
+	Didn' t added the code for twisted < 2 
+	because it will go away soon anyway.
+
 2007-03-13  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* data/glade/Makefile.am:
